--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Practice app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "api": "nodemon ./src/api/api.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,8 @@
     "express": "^4.15.2",
     "request": "^2.80.0",
     "request-promise-native": "^1.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
