--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Practice app",
   "main": "index.js",
   "scripts": {
-    "api": "nodemon ./src/api/api.js"
+    "start": "nodemon ./src/server/index.js"
   },
   "repository": {
     "type": "git",
