--- a/package.json
+++ b/package.json
@@ -17,12 +17,21 @@
   },
   "homepage": "https://github.com/amireynoso/search#readme",
   "dependencies": {
-    "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "request": "^2.80.0",
     "request-promise-native": "^1.0.3"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.4.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "nodemon": "^1.11.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2",
+    "ui-navigation": "^1.9.0",
+    "webpack": "^2.2.1"
   }
 }
