--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Practice app",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/server/index.js"
+    "start": "nodemon ./src/server/index.js --exec babel-node --presets react,es2015",
+    "dev-build": "webpack -d --watch",
+    "prod": "NODE_ENV=production npm start",
+    "dev": "NODE_ENV=development npm start"
   },
   "repository": {
     "type": "git",
@@ -27,7 +30,9 @@
     "babel-loader": "^6.4.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "ejs": "^2.5.6",
     "nodemon": "^1.11.0",
+    "path": "^0.12.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
